@@ -41,7 +41,14 @@ module Mail
     # 
     #  Mail::Encodings.param_encode("This is fun") #=> "us-ascii'en'This%20is%20fun"
     def Encodings.param_encode(str)
-      RubyVer.param_encode(str)
+      case
+      when str.ascii_only? && str =~ TOKEN_UNSAFE
+        %Q{"#{str}"}
+      when str.ascii_only?
+        str
+      else
+        RubyVer.param_encode(str)
+      end
     end
 
     # Decodes a parameter value using URI Escaping.
